--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+html,
 body {
   margin: 0;
+  background-color: #ece4f9;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
